--- a/configs/config.yml
+++ b/configs/config.yml
@@ -10,6 +10,7 @@ MODEL:
   POINTNET_NPOINTS: [512, 80, 20, 8]
   POINTNET_RADIUS : [[0.02, 0.08], [0.08, 0.15], [0.15, 0.4], [0.4, 1.2]]
   NO_MODIFY: False 
+  STATIC_MODE: True
 
 
 
@@ -18,17 +19,17 @@ INPUT:
   SIZE_TRAIN: [800,600]
   SIZE_TEST: [800,600]
   NEAR_FAR_SIZE: [[1.0, 8.5, 0.8]]
-  USE_RGB: True
+  USE_RGB: False
   RGB_MAP: False
   USE_DIR: "MAPS" 
 
 DATASETS:
-  TRAIN: ["/data/public/share/xzq_dataset_new"]
-  FRAME_NUM: [200]
-  MASK: True
-  SHIFT: 40
-  MAXRATION: -0.5
-  ROTATION: 10.0
+  TRAIN: ["/data/wmy/NR/dataset/xx"]
+  FRAME_NUM: [1]
+  MASK: False
+  SHIFT: 1
+  MAXRATION: 0.0
+  ROTATION: 5.0
   #Holes: ["/data/wmy/NR/sfs/sport1_sfs_rotation_2_21_3","/data/wmy/NR/sfs/sport2_sfs_5","/data/wmy/NR/sfs/sport3_sfs_tmpn_5","None","/data/wmy/NR/sfs/basketball_ps_sfs_5"]
   #RANDOM_NOISY: 0.0
   SKIP_STEP : [1] 
@@ -38,20 +39,22 @@ DATASETS:
 SOLVER:
   OPTIMIZER_NAME: "Adam"
   BASE_LR: 0.00005
-  WEIGHT_DECAY: 0.000003
+  WEIGHT_DECAY: 0.000001
   IMS_PER_BATCH: 2
   WARMUP_FACTOR: 0.333
   WARMUP_ITERS: 3
   WARMUP_METHOD: "linear"
-  MAX_EPOCHS: 30
+  MAX_EPOCHS: 300
   CHECKPOINT_PERIOD: 1
 
   START_ITERS: 5
   END_ITERS: 20
   LR_SCALE: 0.2
 
-  LOSS_WHOLE_IMAGE: False
+  LOSS_WHOLE_IMAGE: True
 
 
+TEST:
+  IMS_PER_BATCH: 256
 
-OUTPUT_DIR: "/data/wmy/NR/training/xzq_ROI_3"
+OUTPUT_DIR: "/data/wmy/NR/training/xx"
