--- a/configs/config.yml
+++ b/configs/config.yml
@@ -16,19 +16,19 @@ MODEL:
 
 
 INPUT:
-  SIZE_TRAIN: [800,600]
-  SIZE_TEST: [800,600]
-  NEAR_FAR_SIZE: [[1.0, 8.5, 0.8]]
+  SIZE_TRAIN: [650,900]
+  SIZE_TEST: [650,900]
+  NEAR_FAR_SIZE: [[0.5, 8.5, 0.8]]
   USE_RGB: False
   RGB_MAP: False
   USE_DIR: "MAPS" 
 
 DATASETS:
-  TRAIN: ["/data/wmy/NR/dataset/xx"]
+  TRAIN: ["/data/NFS/colmap_datasets/data26/format"]
   FRAME_NUM: [1]
   MASK: False
-  SHIFT: 1
-  MAXRATION: 0.0
+  SHIFT: 10
+  MAXRATION: 0.4
   ROTATION: 5.0
   #Holes: ["/data/wmy/NR/sfs/sport1_sfs_rotation_2_21_3","/data/wmy/NR/sfs/sport2_sfs_5","/data/wmy/NR/sfs/sport3_sfs_tmpn_5","None","/data/wmy/NR/sfs/basketball_ps_sfs_5"]
   #RANDOM_NOISY: 0.0
@@ -38,17 +38,17 @@ DATASETS:
 
 SOLVER:
   OPTIMIZER_NAME: "Adam"
-  BASE_LR: 0.00005
-  WEIGHT_DECAY: 0.000001
-  IMS_PER_BATCH: 2
+  BASE_LR: 0.00009
+  WEIGHT_DECAY: 0.0000001
+  IMS_PER_BATCH: 5
   WARMUP_FACTOR: 0.333
-  WARMUP_ITERS: 3
+  WARMUP_ITERS: 10
   WARMUP_METHOD: "linear"
-  MAX_EPOCHS: 300
-  CHECKPOINT_PERIOD: 1
+  MAX_EPOCHS: 3200
+  CHECKPOINT_PERIOD: 100
 
-  START_ITERS: 5
-  END_ITERS: 20
+  START_ITERS: 300
+  END_ITERS: 1500
   LR_SCALE: 0.2
 
   LOSS_WHOLE_IMAGE: True
@@ -57,4 +57,4 @@ SOLVER:
 TEST:
   IMS_PER_BATCH: 256
 
-OUTPUT_DIR: "/data/wmy/NR/training/xx"
+OUTPUT_DIR: "/data/NFS/wmy/training/data26_colmap"
